# hyper.dev

./: CNAME  Makefile  Pipfile  feed.xml  index.html  index.jinja2  maji.py  post.jinja2  pyproject.toml
blog/: 1001-lols.html  1001-lols.md  101-lol.html  101-lol.md  a-graph-based-movie-recommender-engine-using-guile-scheme.html  a-series-of-unlikely-explanations.html  a-series-of-unlikely-explanations.md  a-work-in-progress.html  api-cognitive-load.html  arew-scheme.html  babelia-search-engine-design-planning.html  babelia-search-engine-design-planning.md  bsddb.html  bsddb.md  c-est-jamais-fini.html  ccc.html  ccc.md  ccse.html  chaos-the-last-question.html  chaos-the-last-question.md  codex-dubito-ergo-cogito-ergo-sum.html  codex-dubito-ergo-cogito-ergo-sum.md  comment-choisir-une-base-de-donnee.html  comment-on-justifie-un-orm.html  dear-mez-breeze.html  dear-mez-breeze.md  diy-a-search-engine-in-gnu-guile.html  diy-ai.html  diy-graph-database-in-python.html  do-it-yourself-a-search-engine.html  en-avant-le-web-avec-python.html  fauxtexte.html  fauxtexte.md  feedback-client-sur-la-creation-de-la-terre.html  foundationdb-afpyro-talk.html  foundationdb-afpyro-talk.md  functional-database-versioned-generic-tuple-store.html  fuzzbuzz-hash-algorithm.html  fuzzbuzz-hash-algorithm.md  fuzzbuzz.html  (+55 more)
blog/import-okdb/: 00.md  index.html
blog/poor-man-spritely/: 00.md  index.html
static/: styles.css
static/video/: space.webm
